[gd_scene load_steps=8 format=3 uid="uid://dt85oqb1nvmsm"]

[ext_resource type="Script" uid="uid://bhhny2jjpaae6" path="res://scenes/enemy/enemy.gd" id="1_4a83h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4a83h"]
size = Vector2(99, 101)

[sub_resource type="CircleShape2D" id="CircleShape2D_4a83h"]
radius = 99.0051

[sub_resource type="Animation" id="Animation_4a83h"]
resource_name = "spawnin"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.403447)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.403447)
}

[sub_resource type="Animation" id="Animation_a3pup"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_40wdo"]
resource_name = "die"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1e-05, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1e-05, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tjssy"]
_data = {
&"RESET": SubResource("Animation_a3pup"),
&"die": SubResource("Animation_40wdo"),
&"spawnin": SubResource("Animation_4a83h")
}

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
scale = Vector2(1e-05, 1e-05)
collision_layer = 2
collision_mask = 14
platform_floor_layers = 4294967287
script = ExtResource("1_4a83h")

[node name="Polygon2D" type="Polygon2D" parent="."]
scale = Vector2(2.64, 2.64)
color = Color(0.93, 0.4929, 0.4929, 1)
polygon = PackedVector2Array(-1, 1, 11, 11, 1, 18, -29.1667, 42.803, -20, 14, -54.9242, 0, -24, -7, -40.5303, -39.0151, -10, -21, 3, -21, 8, -17, 12, -12)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-12.5, -4.5)
shape = SubResource("RectangleShape2D_4a83h")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-13, -4)
shape = SubResource("CircleShape2D_4a83h")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_tjssy")
}
autoplay = "spawnin"

[node name="dietimer" type="Timer" parent="."]
wait_time = 5.0

[node name="cooldown" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="dietimer" to="." method="_on_dietimer_timeout"]
[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
